// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PipelineErrorDialog /> should render with minimal props 1`] = `
<PipelineErrorDialog
  actions={Array []}
  message=""
  params={
    Object {
      "code": "123",
      "message": "Error message",
      "pipeline": "fakePipeline",
      "request": Object {},
    }
  }
>
  <BasicDialog
    actions={Array []}
    title="modal.title_error"
  >
    <div
      aria-labelledby="basicDialogTitle basicDialogDesc"
      aria-modal={true}
      className="css-hrxvvd"
      data-test-id="basicDialog"
      role="alertdialog"
    >
      <div
        className="css-1sirlct"
      >
        <Title
          title="modal.title_error"
        >
          <div
            aria-level="2"
            className="css-axwumg"
            id="basicDialogTitle"
            role="heading"
          >
            <Ellipsis
              className=""
              ellipsis="..."
              rows={3}
            >
              <Dotdotdot
                clamp={3}
                className=""
                ellipsis="..."
                tagName="div"
                truncationChar="…"
                useNativeClamp={true}
              >
                <div
                  className=""
                >
                  <Translate
                    className={null}
                    params={Object {}}
                    role={null}
                    string="modal.title_error"
                  >
                    <span
                      className={null}
                      role={null}
                    >
                      modal.title_error
                    </span>
                  </Translate>
                </div>
              </Dotdotdot>
            </Ellipsis>
          </div>
        </Title>
        <Content
          content={
            <div
              onClick={[Function]}
            >
              <React.Fragment>
                <Translate
                  className={null}
                  params={Object {}}
                  role={null}
                  string="Error message"
                />
              </React.Fragment>
            </div>
          }
        >
          <div
            className="css-1rx8rr8"
            id="basicDialogDesc"
          >
            <div
              onClick={[Function]}
            >
              <Translate
                className={null}
                params={Object {}}
                role={null}
                string="Error message"
              >
                <span
                  className={null}
                  role={null}
                >
                  Error message
                </span>
              </Translate>
            </div>
          </div>
        </Content>
      </div>
      <div
        className="css-1h5vk0a"
      >
        <div
          className="css-hw75se"
        >
          <Buttons
            actions={Array []}
          />
        </div>
      </div>
    </div>
  </BasicDialog>
</PipelineErrorDialog>
`;

exports[`<PipelineErrorDialog /> should show a custom message if a message is is provided 1`] = `
<PipelineErrorDialog
  actions={Array []}
  message="Custom message"
  params={
    Object {
      "code": "123",
      "message": "Error message",
      "pipeline": "fakePipeline",
      "request": Object {},
    }
  }
>
  <BasicDialog
    actions={Array []}
    title="modal.title_error"
  >
    <div
      aria-labelledby="basicDialogTitle basicDialogDesc"
      aria-modal={true}
      className="css-hrxvvd"
      data-test-id="basicDialog"
      role="alertdialog"
    >
      <div
        className="css-1sirlct"
      >
        <Title
          title="modal.title_error"
        >
          <div
            aria-level="2"
            className="css-axwumg"
            id="basicDialogTitle"
            role="heading"
          >
            <Ellipsis
              className=""
              ellipsis="..."
              rows={3}
            >
              <Dotdotdot
                clamp={3}
                className=""
                ellipsis="..."
                tagName="div"
                truncationChar="…"
                useNativeClamp={true}
              >
                <div
                  className=""
                >
                  <Translate
                    className={null}
                    params={Object {}}
                    role={null}
                    string="modal.title_error"
                  >
                    <span
                      className={null}
                      role={null}
                    >
                      modal.title_error
                    </span>
                  </Translate>
                </div>
              </Dotdotdot>
            </Ellipsis>
          </div>
        </Title>
        <Content
          content={
            <div
              onClick={[Function]}
            >
              <React.Fragment>
                <Translate
                  className={null}
                  params={Object {}}
                  role={null}
                  string="Custom message"
                />
              </React.Fragment>
            </div>
          }
        >
          <div
            className="css-1rx8rr8"
            id="basicDialogDesc"
          >
            <div
              onClick={[Function]}
            >
              <Translate
                className={null}
                params={Object {}}
                role={null}
                string="Custom message"
              >
                <span
                  className={null}
                  role={null}
                >
                  Custom message
                </span>
              </Translate>
            </div>
          </div>
        </Content>
      </div>
      <div
        className="css-1h5vk0a"
      >
        <div
          className="css-hw75se"
        >
          <Buttons
            actions={Array []}
          />
        </div>
      </div>
    </div>
  </BasicDialog>
</PipelineErrorDialog>
`;
